--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ header {
   background-color: white;
   text-align: center;
 }
-IMG.logo {
+.logo {
     display: block;
     margin-left: auto;
     margin-right: auto }
