--- a/index.css
+++ b/index.css
@@ -1,7 +1,4 @@
 header {
   background-color: white;
+  text-align: centre:
 }
-img.logo {
-    display: block;
-    margin-left: auto;
-    margin-right: auto }
