--- a/index.css
+++ b/index.css
@@ -7,21 +7,21 @@ img.logo {
     margin-left: auto;
     margin-right: auto 
 }
-Birte {
+.Birte {
     width: 300px;
     height: 300px;
     border: 25px solid green;
     padding: 25px;
     margin: 25px; 
 }
-Ben {
+.Ben {
     width: 300px;
     height: 300px;
     border: 25px solid red;
     padding: 25px;
     margin: 25px; 
 }
-Nicki {
+.Nicki {
     width: 300px;
     height: 300px;
     border: 25px solid blue;
