--- a/index.css
+++ b/index.css
@@ -2,26 +2,30 @@ header {
   background-color: white;
   text-align: center;
 }
+
 img.logo {
     display: block;
     margin-left: auto;
     margin-right: auto 
 }
-.Birte {
+
+.birte {
     width: 300px;
     height: 300px;
     border: 25px solid green;
     padding: 25px;
     margin: 25px; 
 }
-.Ben {
+
+.ben {
     width: 300px;
     height: 300px;
     border: 25px solid red;
     padding: 25px;
     margin: 25px; 
 }
-.Nicki {
+
+.nicki {
     width: 300px;
     height: 300px;
     border: 25px solid blue;
