--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ img.logo {
     margin: 25px; 
 }
 
-h1.title (
+title (
     text-align: center;
-    font-family: "amatic sc";
+    font-family: 'amatic sc';
 )
