--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ img.logo {
     margin-right: auto 
 }
 
-.birte {
+.box {
     width: 300px;
     height: 300px;
     border: 25px solid green;
@@ -17,7 +17,6 @@ img.logo {
     margin: 25px;
     text-align: center;
     display: inline-block;
-    clear: both;
 }
 
 .ben {
