--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ img.logo {
     margin: 25px;
     text-align: center;
     display: inline-block;
-    line-height: 1.2;
+    vertical-align: baseline;
 }
 
 .ben {
