--- a/index.css
+++ b/index.css
@@ -5,8 +5,9 @@ header {
 
 img.logo {
     display: block;
+    background-color: white;
     margin-left: auto;
-    margin-right: auto 
+    margin-right: auto;
 }
 
 .box {
