--- a/index.css
+++ b/index.css
@@ -30,6 +30,9 @@ img.logo {
 .ben {
   border: 25px solid blue;
   background-image: url("assets/Ben.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center; 
 }
 
 .title {
