--- a/index.css
+++ b/index.css
@@ -42,7 +42,7 @@ img.logo {
 }
 
 .birte {
-  border: 25px solid light-blue;
+  border: 25px solid lightblue;
   background-image: url("assets/Birte.png");
   background-repeat: no-repeat;
   background-position: center; 
